# elder_care

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs/source/: api.md  changes.md  conf.py  index.md
src/elder_care/: __init__.py  _model_functions.py  _simulate.py  config.py  estimate.py  model.py  model_functions.py  simulate.py  task_estimate.py  utils.py
src/elder_care/counterfactual/: state_space_counterfactual.py  task_simulate_counterfactual.py  task_specify_counterfactual.py
src/elder_care/data_management/: backup_create_parent_child_data_set.py  task_create_estimation_data_set.py  task_create_parent_child_data_set.py  task_merge_data.py  task_merge_parent_child_waves.py  task_merge_waves.py
src/elder_care/descriptives/: task_create_descriptives.py  task_statistical_office.py
src/elder_care/estimation/: standard_errors.py  task_estimate_standard_errors.py
src/elder_care/event_study/: event_study.R  event_study_parents.R  event_study_time_to_caregiving.R
src/elder_care/exogenous_processes/: create_exog_processes_copy.py  task_create_exog_processes.py  task_create_exog_processes_soep.py
src/elder_care/model/: budget.py  exogenous_processes.py  params.py  shared.py  specify_model.py  specs.yaml  state_space.py  task_check_solve.py  task_create_model_dictionary.py  task_debugging.py  task_model_fit.py  task_specify_model.py  utility_functions.py
src/elder_care/moments/: backup_create_empirical_cov.py  model_specs.yaml  task_care_mix_statistical_office.py  task_create_auxiliary_moments.py  task_create_care_mix_coefficients.py  task_create_care_mix_regressions.py  task_create_cpi_germany.py  task_create_empirical_cov.py  task_create_empirical_moments.py  task_initial_conditions.py  task_simulate_moments.py
src/elder_care/sandbox/: __basic_model.ipynb  _basic_model.ipynb  _crosstab.ipynb  _simulate_moments.ipynb  basic_care_demand.ipynb  basic_model.ipynb  basic_model_backup.ipynb  basic_model_run.ipynb  crosstab.ipynb  estimation_data.ipynb  estimation_data_backup.ipynb  estimation_data_backup2.ipynb  estimation_data_backup3.ipynb  estimation_data_backup4.ipynb  estimation_data_new.ipynb  estimation_data_new_recover-Copy1.ipynb  estimation_data_new_recover.ipynb  formal_care_imputation.ipynb  lstsq.ipynb  merge_waves.ipynb  model.ipynb  model_fit.ipynb  model_old.ipynb  msm.ipynb  parent_child_data.ipynb  run.py  simulate_moments.ipynb  simulate_moments_backup.ipynb  simulate_moments_run.ipynb  soep_is_2016_exog_other_informal_care.ipynb  state_variables.ipynb  task_model_fit.py
src/elder_care/simulation/: backup_simulate.py  initial_conditions.py  simulate.py
src/parental_care/: __init__.py  config.py
src/parental_care/data_management/: task_create_estimation_data_set.py  task_merge_data.py  task_merge_waves.py
src/parental_care/sandbox/: data_merging.ipynb  estimation_data.ipynb  estimation_data_new.ipynb  parent_child_data.ipynb
tests/: test_empirical_moments.py  test_estimation_data.py  test_exog_transition_probs.py  test_import.py  test_merge_waves.py
