[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]


[tool.setuptools_scm]
write_to = "src/elder_care/_version.py"

[tool.pytask.ini_options]
paths = "./src/elder_care"


[tool.interrogate]
ignore-init-module = true
ignore-nested-functions = true
exclude = ["setup.py", "docs", "bld"]
ignore-regex = ["task_*"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py311"
fix = true
lint.select = ["ALL"]
lint.extend-ignore = [
    # missing type annotation
    "ANN001",

    # missing type annotation for `*args`
    "ANN002",

    # missing type annotation for `**kwargs`
    "ANN003",

    # missing return type annotation for public function
    "ANN201",

    # missing return type annotation for private function
    "ANN202",

    # Missing docstring in public module
    "D100",

    # missing docstring in public function
    "D103",

    # missing docstring in public package
    "D104",

    # exception must not use a string literal
    "EM101",

    # exception must not use an f-string literal
    "EM102",

    # ignore isort
    "I",

    # Too many arguments to function call
    "PLR0913",

    # use of `assert` detected
    "S101",

    # Private member accessed: `_stochastic_info`
    "SLF001",

    # long messages outside the exception class
    "TRY003",

    # Comparison to True should be cond is True
    "E712"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
"docs/source/conf.py" = ["INP001"]
"src/elder_care/sandbox/run.py" = ["INP001"]
"src/elder_care/utils.py" = ["S301"]
"src/elder_care/simulation/initial_conditions.py" = ["PD008"]
"src/elder_care/moments/task_create_empirical_moments.py" = ["ERA001"]
"src/elder_care/moments/task_create_empirical_cov.py" = ["ERA001"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"
