[metadata]
name = elder_care
description = A project for ...
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/segsell/elder_care
author = Sebastian Gsell
author_email = gsell.sebastian@gmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/segsell/elder_care
    Documentation = https://github.com/segsell/elder_care
    Github = https://github.com/segsell/elder_care
    Tracker = https://github.com/segsell/elder_care/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/elder_care/_version.py
